--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="#"><img src="img/logo.png" class="logo" alt=""></a>
+        <a href="#"><img src="logo.png" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a class="active" href="eco.html">home</a></li>
@@ -30,22 +30,22 @@
     </section>
     <section id="feature" class="section-p1">
         <div class="fe-box">
-            <img src="img/features/f1.png" alt="">
+            <img src="f1.png" alt="">
             <h6>free shiping</h6>
 
         </div>
         <div class="fe-box">
-            <img src="img/features/f2.png" alt="">
+            <img src="f2.png" alt="">
             <h6>online order</h6>
 
         </div>
         <div class="fe-box">
-            <img src="img/features/f3.png" alt="">
+            <img src="f3.png" alt="">
             <h6>save money</h6>
 
         </div>
         <div class="fe-box">
-            <img src="img/features/f4.png" alt="">
+            <img src="f4.png" alt="">
             <h6>promotions</h6>
 
         </div>
