--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 
         </div>
         <div class="fe-box">
-            <img src="img/features/f5.png" alt="">
+            <img src="f5.png" alt="">
             <h6>happy sell</h6>
 
         </div>
         <div class="fe-box">
-            <img src="img/features/f6.png" alt="">
+            <img src="f6.png" alt="">
             <h6>F24/7Support</h6>
 
         </div>
