--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
         <div class="col">
             <img class="logo" src="img/logo.png" alt="">
             <h4>contact</h4>
-            <p><strong>adress:</strong> samne dekh uske baad right to house in collony</p>
-            <p><strong>phone :</strong> 100 galat lag raha hai</p>
-            <p><strong>hours :</strong> yar bella hai apun, kabhi bhi aa</p>
+            <p><strong>adress:</strong>  right to house in collony</p>
+            <p><strong>phone :</strong> 1007667866</p>
+            <p><strong>hours :</strong> 24x7</p>
             <div class="follow">
                 <h4>Follow us</h4>
             </div>
@@ -375,11 +375,11 @@
            <h4>Install App</h4>
            <p>from app store and google play </p>
            <div class="row">
-               <img src="img/pay/app.jpg" alt="">
-               <img src="img/pay/play.jpg" alt="">
+               <img src="app.jpg" alt="">
+               <img src="play.jpg" alt="">
            </div>
            <p>secure payment getway</p>
-           <img src="img/pay/pay.png" alt="">
+           <img src="pay.png" alt="">
        </div>
        <div class="copywrite">
            <p>all rights are reserve under copyright section</p>
