--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     </section>
     <section id="product1" class="section-p1">
         <h2>featured products</h2>
-        <p>garmi ke kapde le le</p>
+        <p>garmi ke kapde le lo aap</p>
         <div class="pro-container">
         <div class="pro">
-            <img src="img/products/f1.jpg" alt="">
+            <img src="f1.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -82,7 +82,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f2.jpg" alt="">
+            <img src="f2.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
