--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f3.jpg" alt="">
+            <img src="f3.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -114,7 +114,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f4.jpg" alt="">
+            <img src="f4.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -130,7 +130,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f5.jpg" alt="">
+            <img src="f5.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -146,7 +146,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f6.jpg" alt="">
+            <img src="f6.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -162,7 +162,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f7.jpg" alt="">
+            <img src="f7.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -190,7 +190,7 @@
         <p>garmi ke kapde le le</p>
         <div class="pro-container">
         <div class="pro">
-            <img src="img/products/n1.jpg" alt="">
+            <img src="n1.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -206,7 +206,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n2.jpg" alt="">
+            <img src="n2.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -222,7 +222,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n3.jpg" alt="">
+            <img src="n3.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -238,7 +238,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n4.jpg" alt="">
+            <img src="n4.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -254,7 +254,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n5.jpg" alt="">
+            <img src="n5.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -270,7 +270,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n6.jpg" alt="">
+            <img src="n6.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -286,7 +286,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n7.jpg" alt="">
+            <img src="n7.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -345,7 +345,7 @@
     </section>
     <footer class="section-p1">
         <div class="col">
-            <img class="logo" src="img/logo.png" alt="">
+            <img class="logo" src="logo.png" alt="">
             <h4>contact</h4>
             <p><strong>adress:</strong>  right to house in collony</p>
             <p><strong>phone :</strong> 1007667866</p>
