--- a/shop.html
+++ b/shop.html
@@ -25,10 +25,10 @@
   
     <section id="product1" class="section-p1">
         <h2>featured products</h2>
-        <p>garmi ke kapde le le</p>
+        <p>garmi ke kapde le lo</p>
         <div class="pro-container">
         <div class="pro" onclick="window.location.href='sproduct.html';">
-            <img src="img/products/f1.jpg" alt="">
+            <img src="f1.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -44,7 +44,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f2.jpg" alt="">
+            <img src="f2.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -60,7 +60,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f3.jpg" alt="">
+            <img src="f3.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -76,7 +76,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f4.jpg" alt="">
+            <img src="f4.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -92,7 +92,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f5.jpg" alt="">
+            <img src="f5.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -108,7 +108,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f6.jpg" alt="">
+            <img src="f6.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -124,7 +124,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/f7.jpg" alt="">
+            <img src="f7.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -149,10 +149,10 @@
     </section>
     <section id="product1" class="section-p1">
         <h2>Naye type ke dekhlo</h2>
-        <p>garmi ke kapde le le</p>
+        <p>garmi ke kapde le lo</p>
         <div class="pro-container">
         <div class="pro">
-            <img src="img/products/n1.jpg" alt="">
+            <img src="n1.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -168,7 +168,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n2.jpg" alt="">
+            <img src="n2.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -184,7 +184,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n3.jpg" alt="">
+            <img src="n3.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -200,7 +200,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n4.jpg" alt="">
+            <img src="n4.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -216,7 +216,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n5.jpg" alt="">
+            <img src="n5.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -232,7 +232,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n6.jpg" alt="">
+            <img src="n6.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -248,7 +248,7 @@
             <a href="#"><i class="fal fa-shopping-cart"></i></a>
         </div>
         <div class="pro">
-            <img src="img/products/n7.jpg" alt="">
+            <img src="n7.jpg" alt="">
             <div class="des">
                 <span>adidas</span>
                 <h5>cartoon t-shirt</h5>
@@ -284,11 +284,11 @@
     </section>
     <footer class="section-p1">
         <div class="col">
-            <img class="logo" src="img/logo.png" alt="">
+            <img class="logo" src="logo.png" alt="">
             <h4>contact</h4>
-            <p><strong>adress:</strong> samne dekh uske baad right to house in collony</p>
-            <p><strong>phone :</strong> 100 galat lag raha hai</p>
-            <p><strong>hours :</strong> yar bella hai apun, kabhi bhi aa</p>
+            <p><strong>adress:</strong>  right to house in collony</p>
+            <p><strong>phone :</strong> 100898787</p>
+            <p><strong>hours :</strong> 24x7</p>
             <div class="follow">
                 <h4>Follow us</h4>
             </div>
@@ -314,11 +314,11 @@
            <h4>Install App</h4>
            <p>from app store and google play </p>
            <div class="row">
-               <img src="img/pay/app.jpg" alt="">
-               <img src="img/pay/play.jpg" alt="">
+               <img src="app.jpg" alt="">
+               <img src="play.jpg" alt="">
            </div>
            <p>secure payment getway</p>
-           <img src="img/pay/pay.png" alt="">
+           <img src="pay.png" alt="">
        </div>
        <div class="copywrite">
            <p>all rights are reserve under copyright section</p>
